# NaoChallengeProject

./: .gitignore  Architecture.graffle  Calendrier Partie 1:4.graffle  Calendrier Partie 2:4.graffle  Calendrier Partie 3:4.graffle  Calendrier Partie 4:4.graffle  Calendrier Rouge Partie 1:4.graffle  Calendrier Rouge Partie 2:4.graffle  Calendrier Rouge Partie 3:4.graffle  Calendrier Rouge Partie 4:4.graffle  Calendrier de Test.graffle  Nao State Machine.graffle  Nao Vision.graffle  NaoChallenge.py  README.md  structure.txt
Distributeur/: Embout_moteur.STL
Distributeur/Altium v3/: PCBdis.PcbDoc  Sheet_distributeur.SchDoc  distributeur.PrjPCB  distributeur.PrjPCBStructure
Distributeur/Altium v4/: PCBdis.PcbDoc  PCBdis.PcbLib  Sheet_distributeur.SchDoc  distributeur.PrjPCB
Distributeur/CAO/: AsmCache.asm  AsmCache.cfg  (+93 more)
NaoChallenge/: NCMod.py  camLow.py  directionFromLine.py  followTheLine.py  ihm.py  logs.py  naoWalks.py
bitmaps/: BT.h  Bouton.h  IR.h  NaoLogo.h  NaoVeille.h  Thumbs.db  allBitmaps.h  datamatrix200.h  datamatrix202.h
main_arduino/: Thumbs.db
naoqi/: NaoChallenge.py  README.md  launchGato.py  launchLibNaoChallengeExample.py  launchMaestro.py  readDataMatrix.py
src/: CMakeLists.txt  NaoChallengeGeoloc.cpp  NaoChallengeGeoloc.h  README.md  bluetoothCom.sh  config.lua  getCalendarDay.py  launchLibNaoChallengeExample.py  main.cpp  ocr.sh  qiproject.xml  readDataMatrix.py  readText.py  testALDataMatrixDetection.py
src/tesseractDictionnaire/: .normproto  .punc-dawg  fra.config  fra.inttemp  fra.number-dawg  fra.traineddata
tesseract/: README.md
(+60 files in other folders)
